--- a/vina.html
+++ b/vina.html
@@ -7,6 +7,7 @@
     <title>Vina</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Parisienne|Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,26 +29,26 @@
         <div class="vine-bg">
 
             <div class="bottle click">
-                <img src="/img/bottle.jpeg" alt="">
+                <img src="/img/Wine Bottle/8tamburasa.png" alt="">
                 <div class="bottle-text">
                     <h1>8 TAMBURAŠA</h1>
                 </div>
             </div>
             <div class="bottle-2 click">
-                <img src="/img/bottle.jpeg" alt="">
+                <img src="/img/Wine Bottle/Rose.jpg" alt="">
                 <div class="bottle-text">
                     <h1>ROSÉ</h1>
                 </div>
             </div>
             <div class="bottle click">
-                <img src="/img/bottle.jpeg" alt="">
+                <img src="/img/Wine Bottle/Zivot Tece.jpg" alt="">
                 <div class="bottle-text">
                     <h1>ŽIVOT TEČE</h1>
 
                 </div>
             </div>
             <div class="bottle-2 click">
-                <img src="/img/bottle.jpeg" alt="">
+                <img src="/img/Wine Bottle/savignon blanc.png" alt="">
                 <div class="bottle-text">
                     <h1>SAUVIGNON BLANC</h1>
 
