--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html">
-                <img src="/img/grapes.png" alt="">
+            <a href="index.html">
+                <img src="img/grapes.png" alt="">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="#">Vinarija</a></li>
-                <li><a href="/vina.html">Vina</a></li>
+                <li><a href="/Mihajlovic/index.html">Vinarija</a></li>
+                <li><a href="vina.html">Vina</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="bg">
-            <img src="/img/home-img.jpeg" class="img-slide">
+            <img src="/Mihajlovic/img/home-img.jpeg" class="img-slide">
         </div>
 
         <div class="home-title">
