--- a/vina.html
+++ b/vina.html
@@ -13,14 +13,14 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html">
-                <img src="/img/grapes.png" alt="">
+            <a href="index.html">
+                <img src="img/grapes.png" alt="">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="#">Vinarija</a></li>
-                <li><a href="/vina.html">Vina</a></li>
+                <li><a href="/Mihajlovic/index.html">Vinarija</a></li>
+                <li><a href="vina.html">Vina</a></li>
                 <li><a href="#">Kontakt</a></li>
             </ul>
         </nav>
@@ -29,46 +29,46 @@
         <div class="vine-bg">
 
             <div class="bottle click">
-                <img src="/img/Wine Bottle/8tamburasa.png" alt="">
+                <img src="img/Wine Bottle/8tamburasa.png" alt="">
                 <div class="bottle-text">
                     <h1>8 TAMBURAŠA</h1>
                 </div>
             </div>
             <div class="bottle-2 click">
-                <img src="/img/Wine Bottle/Rose.jpg" alt="">
+                <img src="img/Wine Bottle/Rose.jpg" alt="">
                 <div class="bottle-text">
                     <h1>ROSÉ</h1>
                 </div>
             </div>
             <div class="bottle click">
-                <img src="/img/Wine Bottle/Zivot Tece.jpg" alt="">
+                <img src="img/Wine Bottle/Zivot Tece.jpg" alt="">
                 <div class="bottle-text">
                     <h1>ŽIVOT TEČE</h1>
 
                 </div>
             </div>
             <div class="bottle-2 click">
-                <img src="/img/Wine Bottle/savignon blanc.png" alt="">
+                <img src="img/Wine Bottle/savignon blanc.png" alt="">
                 <div class="bottle-text">
                     <h1>SAUVIGNON BLANC</h1>
 
                 </div>
             </div>
             <div class="bottle click">
-                <img src="/img/bottle.jpeg" alt="">
+                <img src="img/bottle.jpeg" alt="">
                 <div class="bottle-text">
                     <h1>Lorem ipsum</h1>
 
                 </div>
             </div>
             <div class="bottle-2 click">
-                <img src="/img/bottle.jpeg" alt="">
+                <img src="img/bottle.jpeg" alt="">
                 <div class="bottle-text">
                     <h1>Lorem ipsum</h1>
                 </div>
             </div>
             <div class="bottle click">
-                <img src="/img/bottle.jpeg" alt="">
+                <img src="img/bottle.jpeg" alt="">
                 <div class="bottle-text">
                     <h1>Lorem ipsum</h1>
 
